--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ mobile-sam = {git = "https://github.com/ChaoningZhang/MobileSAM.git"}
 timm = "^0.9.8"
 rembg = "^2.0.51"
 opencv-python = "^4.8.1.78"
+backgroundremover = "^0.2.5"
 
 [build-system]
 requires = ["poetry-core"]
