--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ timm = "^0.9.8"
 rembg = "^2.0.51"
 opencv-python = "^4.8.1.78"
 backgroundremover = "^0.2.5"
+scikit-learn = "^1.3.2"
+scikit-image = "^0.22.0"
 
 [build-system]
 requires = ["poetry-core"]
