--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ opencv-python = "^4.8.1.78"
 backgroundremover = "^0.2.5"
 scikit-learn = "^1.3.2"
 scikit-image = "^0.22.0"
+tqdm = "^4.66.1"
 
 [build-system]
 requires = ["poetry-core"]
