--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ backgroundremover = "^0.2.5"
 scikit-learn = "^1.3.2"
 scikit-image = "^0.22.0"
 tqdm = "^4.66.1"
+seaborn = "^0.13.0"
 
 [build-system]
 requires = ["poetry-core"]
