--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ scikit-learn = "^1.3.2"
 scikit-image = "^0.22.0"
 tqdm = "^4.66.1"
 seaborn = "^0.13.0"
+shapely = "^2.0.2"
 
 [build-system]
 requires = ["poetry-core"]
